# ptylenz

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.ja.md  DESIGN.md  PROJECT.ja.md  PROJECT.md  README.ja.md  README.md  install.sh
.claude/: INSTRUCTIONS.md
.github/workflows/: release.yml
docs/: architecture-ja.md  architecture.md  getting-started-ja.md  getting-started.md  shell-integration-ja.md  shell-integration.md
docs/decisions/: notify-dead-dep.md  prompt-command-strategy.md
spec/: SPEC.md
src/: block.rs  claude_feeder.rs  main.rs  pty.rs  tui_app.rs
